# display_recirc

./: .gitignore  buzzer.c  buzzer.h  capt_config.c  capt_config.h  capt_proc.c  capt_proc.h  capt_task.c  capt_task.h  clock_app.c  clock_config.c  clock_config.h  display_grace.c  display_grace.h  display_hal.c  display_hal.h  display_recirculador.c  freemaster_cfg.h  gpio_app.c  gpio_app.h  i2c_app.c  i2c_app.h  main.c  pin_mux.c  pin_mux.h  systick.c  systick.h  tm1629a.c  tm1629a.h  touch_di.c  touch_di.h
__repo__/: LPCXpresso804_manifest_v3_15.xml
__repo__/boards/lpcxpresso804/demo_apps/hello_world/: hello_world_v3_15.xml
__repo__/boards/lpcxpresso804/demo_apps/hello_world/armgcc/: CMakeLists.txt
__repo__/boards/lpcxpresso804/demo_apps/led_blinky/: led_blinky_lpc_v3_15.xml
__repo__/boards/lpcxpresso804/demo_apps/led_blinky/armgcc/: CMakeLists.txt
__repo__/boards/lpcxpresso804/demo_apps/new_project/: new_project_v3_15.xml
__repo__/boards/lpcxpresso804/demo_apps/new_project/armgcc/: CMakeLists.txt
__repo__/boards/lpcxpresso804/demo_apps/power_mode_switch_lpc/: hardware_init.c  power_mode_switch_lpc_v3_15.xml
__repo__/boards/lpcxpresso804/demo_apps/power_mode_switch_lpc/armgcc/: CMakeLists.txt  config.cmake
__repo__/boards/lpcxpresso804/driver_examples/acomp/acomp_basic/: acomp_basic_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/acomp/acomp_interrupt/: acomp_interrupt_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/adc/lpc_adc_basic/: app.h  lpc_adc_basic_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/adc/lpc_adc_burst/: app.h  lpc_adc_burst_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/adc/lpc_adc_interrupt/: lpc_adc_interrupt_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/bod/: lpc_bod_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/bod/armgcc/: CMakeLists.txt
__repo__/boards/lpcxpresso804/driver_examples/crc/: lpc_crc_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/mrt/: mrt_example_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/wkt/: wkt_example_v3_15.xml
__repo__/boards/lpcxpresso804/driver_examples/wwdt/: wwdt_example_v3_15.xml
__repo__/boards/lpcxpresso804/freemaster_examples/fmstr_pdbdm/: fmstr_example_pdbdm_v3_15.xml
__repo__/boards/lpcxpresso804/freemaster_examples/fmstr_uart/: fmstr_example_uart_v3_15.xml
__repo__/devices/LPC804/: all_lib_device.cmake  device_CMSIS.LPC804.cmake  device_startup.LPC804.cmake  device_system.LPC804.cmake
__repo__/devices/LPC804/project_template/: clock_config.c  device_project_template.LPC804.cmake  pin_mux.c
armgcc/: CMakeLists.txt  config.cmake  flags.cmake  mcux_include.json
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  new_project.elf  output.map  recirc_display
armgcc/debug/.cmake/api/v1/reply/: cache-v2-c5fa0e6ea70ad4eb58de.json  cmakeFiles-v1-2cb4dd074e98f721bba8.json  codemodel-v2-112d39af9b1791c2d0c5.json  index-2026-01-19T17-05-24-0235.json  target-recirc_display-debug-19543315e62da93a2bca.json
(+102 files in other folders)
